--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -50,6 +50,9 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.nuget.grpc.core": "2.36.0",
+    "com.unity.nuget.google.protobuf": "3.17.3",
+    "com.unity.nuget.system.threading.tasks.extensions": "4.5.4"
   }
 }
